--- a/app/src/main/res/layout-land/activity_quiz.xml
+++ b/app/src/main/res/layout-land/activity_quiz.xml
@@ -9,37 +9,61 @@
         android:background="@color/background"
         tools:context=".QuizActivity">
 
-    <TextView
-            android:id="@+id/statement"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/first_statement"
-            android:textColor="@color/textColor"
-            android:textSize="25sp"
-            android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginTop="50dp"/>
-
     <LinearLayout
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal|center_vertical">
+            android:orientation="vertical"
+            android:gravity="center">
+
+        <TextView
+                android:id="@+id/statement"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/first_statement"
+                android:textColor="@color/textColor"
+                android:textSize="25sp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="50dp"/>
 
         <Button
-                android:id="@+id/yes_button"
+                android:id="@+id/get_answer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/yes"
+                android:layout_marginTop="10dp"
+                android:text="@string/show_answer"
+                android:textColor="@color/colorAccent"
                 style="?android:attr/buttonBarButtonStyle"/>
-        <Button
-                android:id="@+id/no_button"
+
+        <TextView
+                android:id="@+id/count_cheats"
+                android:textColor="@color/textColor"
+                android:textSize="17sp"
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <LinearLayout
+                android:layout_marginTop="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/no"
-                style="?android:attr/buttonBarButtonStyle"/>
+                android:orientation="horizontal"
+                android:layout_gravity="center_horizontal|center_vertical">
+
+            <Button
+                    android:id="@+id/yes_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/yes"
+                    style="?android:attr/buttonBarButtonStyle"/>
+            <Button
+                    android:id="@+id/no_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no"
+                    style="?android:attr/buttonBarButtonStyle"/>
+        </LinearLayout>
     </LinearLayout>
 
     <ImageButton
