--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -20,6 +20,24 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"/>
 
+    <Button
+            android:id="@+id/get_answer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="@string/show_answer"
+            android:textColor="@color/colorAccent"
+            style="?android:attr/buttonBarButtonStyle"/>
+
+    <TextView
+            android:id="@+id/count_cheats"
+            android:layout_marginTop="20dp"
+            android:textColor="@color/textColor"
+            android:textSize="17sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"/>
+
     <LinearLayout
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
@@ -32,17 +50,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/yes"
+                android:textColor="@color/colorAccent"
                 style="?android:attr/buttonBarButtonStyle"/>
         <Button
                 android:id="@+id/no_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/no"
+                android:textColor="@color/colorAccent"
                 style="?android:attr/buttonBarButtonStyle"/>
     </LinearLayout>
 
     <LinearLayout
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
